# GeoDataCompare

./: .env  .gitignore  LICENSE.md  README.md  Readme.md  command.txt  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  requirements_311.txt  requirements_312.txt  setup.cfg
Bash/: readme.md
Data/: bboxs.json  init.sql
Documentation/: Automatic_result.md  Comparison-OSM-OvertureMap_PgRouting.md  Data_modelisation.md  Internship_reformulation.md  OSM_PgRouting.md  OvertureMap_data.md  Test_saudi_arabia.md  command.md  command.txt  dev-doc.md  mapping_OSM_to_OMF.md  research_paper.md  tests-visualisation.md  user-doc.md
GeoServer/: connect_omf.xml  docker-compose.yml  init.sh
Python/: OSM_pgrouting.py  OSM_to_network.py  OvertureMap_data_to_graph.py  building_integration.py  building_part_integration.py  buildings.py  connector_integration.py  data-request.py  data_integration.py  graph_analysis.py  locality_integration.py  main.py  omf.py  open_data.py  osm.py  other.py  overlap_indicator.py  overlap_indicator_calculation.py  poi.py  pyqgis_data_comparison.py  road_integration.py  road_integration_v2.py  utils.py  vector_tiles_postgis.py
Requirements/: requirements.in  requirements.txt  requirements_apache-superset.in  requirements_apache-superset.txt  requirements_base.in  requirements_base.txt  requirements_plotly-dash.in  requirements_plotly-dash.txt  requirements_shiny.in  requirements_shiny.txt  requirements_streamlit.in  requirements_streamlit.txt  requirements_tipg.in  requirements_tipg.txt
Results/: Automatic_result.md
(+146 files in other folders)
