[project]
name = "GeoDataCompare"
authors = [
  {name = "Mathis ROUILLARD"},
  {name = "Hiroshi KANASUGI"},
  {name = "Mathieu MARGOLLÉ"},
  {name = "Mitsuha MIYAKE"},
  {name = "Kensuke SHIMAZAKI"},
]
description = "Visualisation system to compare two input datasets mapped to a common model"
readme = "README.md"
keywords = [
    "OpenStreetMap",
    "Overture Maps Foundation",
    "GIS",
    "visualization",
    "shiny",
    "lonboard"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/LocationMind/OSM_Overture_Works"
Issues = "https://github.com/LocationMind/OSM_Overture_Works/issues"

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3